fix text overflow on course contents

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,12 +115,14 @@ body {
 
 /* Course_contents styling */
 .image-container {
+    padding: 0;
     width: 100vh;
     min-width: 270px;
     max-width: 60vw;
     max-height: 70vw;
     height: 60vh;
     margin: 0 auto;
+    background-color: black;
 
 
 }
@@ -129,6 +131,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 0.5;
 }
 
 .overlay {
@@ -138,18 +141,22 @@ body {
     width: 100%;
     padding: 20px;
     color: #fff;
-    margin: 10px 0;
+
+
 
 }
 
 /* Media queries */
-@media (max-width: 600px) {
+@media (max-width: 520px) {
+    .image-container {
+        min-height: 320px;
+    }
 
     .overlay h1,
     .overlay p {
-        font-size: small
-    }
+        font-size: small;
 
+    }
 }
 
 
